--- a/cluster/namespace/spring-petclinic-rolebinding.yaml
+++ b/cluster/namespace/spring-petclinic-rolebinding.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: spring-petclinic-role-binding
-  namespace: spring-petclinic
+  name: spring-petclinic-sudhakar-role-binding
+  namespace: spring-petclinic-sudhakar
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
