--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -3,25 +3,25 @@ kind: Deployment
 metadata:
   annotations:
   labels:
-    app: spring-petclinic
+    app: spring-petclinic-sudhakar
     app.kubernetes.io/component: web
-    app.kubernetes.io/instance: spring-petclinic
-    app.kubernetes.io/name: spring-petclinic
-    app.kubernetes.io/part-of: spring-petclinic
+    app.kubernetes.io/instance: spring-petclinic-sudhakar
+    app.kubernetes.io/name: spring-petclinic-sudhakar
+    app.kubernetes.io/part-of: spring-petclinic-sudhakar
     app.openshift.io/runtime: java
-  name: spring-petclinic
+  name: spring-petclinic-sudhakar
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: spring-petclinic
+      app: spring-petclinic-sudhakar
   template:
     metadata:
       labels:
-        app: spring-petclinic
+        app: spring-petclinic-sudhakar
     spec:
       containers:
-      - name: spring-petclinic
+      - name: spring-petclinic-sudhakar
         imagePullPolicy: Always
         image: quay.io/siamaksade/spring-petclinic:latest
         livenessProbe:
