--- a/app/service.yaml
+++ b/app/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: spring-petclinic
-  name: spring-petclinic
+    app: spring-petclinic-sudhakar
+  name: spring-petclinic-sudhakar
 spec:
   ports:
   - name: 8080-tcp
@@ -19,6 +19,6 @@ spec:
     protocol: TCP
     targetPort: 8778
   selector:
-    app: spring-petclinic
+    app: spring-petclinic-sudhakar
   sessionAffinity: None
   type: ClusterIP
